--- a/hello-strava-api/pom.xml
+++ b/hello-strava-api/pom.xml
@@ -4,6 +4,13 @@
   <artifactId>hello-strava-api</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+  
+  <properties>
+		<project.java.version>1.8</project.java.version>
+	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
+  
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
@@ -11,9 +18,10 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
+			<source>${project.java.version}</source>
+			<target>${project.java.version}</target>
+			<encoding>${project.build.sourceEncoding}</encoding>
+		</configuration>
       </plugin>
       <plugin>
         <artifactId>maven-war-plugin</artifactId>
